--- a/individual-work/chrisDocker/dockerfile
+++ b/individual-work/chrisDocker/dockerfile
@@ -1,3 +1,3 @@
 FROM alpine:latest
 
-RUN echo "Placeholder: You will be consumed by a carnivorous cloud and a fish will eat your home."
+RUN echo "Placeholder: You will be consumed by a carnivorous cloud and a fish will eat your home"
