Moved my workflow file into workflows.

--- a/workflows/bmoran-workflow.yaml
+++ b/workflows/bmoran-workflow.yaml
@@ -5,7 +5,7 @@ on:
         branches:
           - master
         path:
-          - 'individual-work/bmoran.**'
+          - 'individual-work/bmoran/**'
           - '.github/workflows/bmoran-workflow.yaml'
 
 jobs:
