--- a/.github /workflows/rgrace-workflow.yaml
+++ b/.github /workflows/rgrace-workflow.yaml
@@ -19,11 +19,11 @@ jobs:
         uses: actions/checkout@v2
      
       - name: Build and run docker image
-        working-directory: individual-work/rgrace
+        working-directory: ./individual-work/rgrace5/
         run: docker build -t test .
 
         name: Run docker image
-        working-directory: individual-work/rgrace
+        working-directory: ./individual-work/rgrace5/
         run: docker run test
-        
+
         
