--- a/.github/workflows/vcradler-prebuild.yml
+++ b/.github/workflows/vcradler-prebuild.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Building Docker image
         working-directory: ./individual-work/vcradler/
         run: |
-            docker build . --file Dockerfile -t vcradler
+            docker build -t vcradler --file Dockerfile
       - name: Run Docker image
         working-directory: ./individual-work/vcradler/
         run: docker run -it -p 3000:3000 vcradler
