attempting to fix the action by rearranging the build command1

--- a/.github/workflows/vcradler-prebuild.yml
+++ b/.github/workflows/vcradler-prebuild.yml
@@ -5,7 +5,7 @@ on:
             - master
 
         paths:
-            - '/individual-work/vcradler/Dockerfile'
+            - '/individual-work/vcradler/**'
             - '.github/workflows/vcradler-premerge.yml'
 
 jobs:
