forgot the a in yaml for my paths

--- a/.github/workflows/vcradler-prebuild.yaml
+++ b/.github/workflows/vcradler-prebuild.yaml
@@ -6,7 +6,7 @@ on:
 
         paths:
             - '/individual-work/vcradler/**'
-            - '.github/workflows/vcradler-premerge.yml'
+            - '.github/workflows/vcradler-premerge.yaml'
 
 jobs:
   build:
