Typofix, Resolving Issue #49 (#55)

--- a/.github/workflows/bmoran-workflow.yaml
+++ b/.github/workflows/bmoran-workflow.yaml
@@ -4,7 +4,7 @@ on:
     pull_request:
         branches:
           - master
-        path:
+        paths:
           - 'individual-work/bmoran/**'
           - '.github/workflows/bmoran-workflow.yaml'
 
