--- a/.github/workflows/GA-1workflow.yml
+++ b/.github/workflows/GA-1workflow.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Building Docker image
         working-directory: ./group-work/AlphaTeamOne/
         run: |
-          docker build . --file Dockerfile --tag AlphaTeamOne
+          docker build . --file Dockerfile --tag alphateamone
 
       - name: Run Docker image
         working-directory: ./group-work/AlphaTeamOne/
-        run: docker run -i -p 3000:3000 AlphaTeamOne
+        run: docker run -i -p 3000:3000 alphateamone
