update COPY command

--- a/group-work/AlphaTeamTwo/Dockerfile
+++ b/group-work/AlphaTeamTwo/Dockerfile
@@ -6,6 +6,6 @@ COPY team2reactapp/package.json /code
 
 RUN npm install
 
-COPY team2reactapp/ /code
+COPY /team2reactapp/ /code
 
 CMD [ "yarn", "start"]
