attempt to fix COPY by adding leading /

--- a/group-work/AlphaTeamTwo/Dockerfile
+++ b/group-work/AlphaTeamTwo/Dockerfile
@@ -2,7 +2,7 @@ FROM node:lts-slim
 
 WORKDIR /code
 
-COPY team2reactapp/package.json /code
+COPY /team2reactapp/package.json /code
 
 RUN npm install
 
