--- a/group-work/AlphaTeamTwo/Dockerfile
+++ b/group-work/AlphaTeamTwo/Dockerfile
@@ -1,13 +1,11 @@
-FROM node:lts-slim
-
-RUN mkdir -p /src/app
-
-WORKDIR /src/app
-
-COPY package.json /src/app/package.json
-
+FROM node:alpine as builder
+WORKDIR /app
+COPY . ./
 RUN npm install
+RUN npm run build
 
-COPY . /src/app
-
-CMD [ "yarn", "start"]
+FROM nginx:alpine
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /app/build /usr/share/nginx/html
+EXPOSE 80
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
