comment out docker run command for now

--- a/.github/workflows/alpha-team-two-workflow.yml
+++ b/.github/workflows/alpha-team-two-workflow.yml
@@ -27,4 +27,4 @@ jobs:
 
       - name: Run Docker image
         working-directory: ./group-work/AlphaTeamTwo/
-        run: docker run alpha-team-two
+        #run: docker run alpha-team-two
