--- a/.github/workflows/alpha-team-two-workflow.yml
+++ b/.github/workflows/alpha-team-two-workflow.yml
@@ -25,6 +25,6 @@ jobs:
         run: |          
           docker build -t alpha-team-two .
 
-      - name: Run Docker image
-        working-directory: ./group-work/AlphaTeamTwo/
+   #   - name: Run Docker image
+   #     working-directory: ./group-work/AlphaTeamTwo/
         #run: docker run alpha-team-two
